<resources>
    <string name="app_name">G.U.A.R.D.</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_app_menu">AppMenuActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <!-- Strings for Map Options, found in menu_main.xml -->
    <string name="location_label">Location:</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="current_location">Current Location</string>

    <!-- Strings for Main activity, found in activity_main.xml -->
    <string name="wifiActivity">WiFi Direct</string>
    <string name="controllerActivity">Manual Control</string>
    <string name="mapActivity">Map</string>
    <string name="logoutButton">Logout</string>

    <!-- Strings for WiFi activity, found in activity_wifi.xml -->
    <string name="wifiOnText">WiFi Direct is: </string>
    <string name="wifiToggleButtonOn">ON</string>
    <string name="wifiToggleButtonOff">OFF</string>

    <!-- Strings for Battery activity, found in activity_battery.xml -->
    <string name="analogValueText">Analog Value</string>
    <string name="arduinoVoltageText">Arduino Voltage</string>
    <string name="actualVoltageText">Actual Voltage</string>

    <!-- Strings for Menu Options, found in menu_options.xml -->
    <string name="profileText">My Profile</string>
    <string name="securityText">My Privacy</string>
    <string name="settingsText">My Settings</string>
    <string name="helpText">Help</string>
    <string name="feedbackText">Feedback</string>
    <string name="logoutText">Logout</string>
    <string name="menuGuardGroup">G.U.A.R.D. App</string>

    <!-- Strings for ImageButton content description, found throughout all xml-->
    <string name="homeIconDesc">Home Icon</string>
    <string name="connectIconDesc">WiFi Icon</string>
    <string name="controlIconDesc">Controller Icon</string>
    <string name="gpsIconDesc">GPS Icon</string>
    <string name="mapIconDesc">Map Icon</string>
    <string name="batteryIconDesc">Battery Icon</string>
    <string name="menuIconDesc">Menu Icon</string>

    <!-- Strings for Traveller profile fragment, found in activity_profile.xml -->
    <string name="updateButtonText">Update</string>
    <string name="updateEmail">Change my Email:</string>
    <string name="newEmailText">New Email</string>
    <string name="oldEmailText">Enter current email</string>
    <string name="updatePassword">Change my password:</string>
    <string name="oldPasswordText">Enter current password</string>
    <string name="newPasswordText">Enter new password</string>
    <string name="confirmNewPasswordText">Confirm new password</string>
    <string name="deleteButtonText">Delete my account</string>

    <!-- Strings for Login and Register Screens, found throughout activity_login.xml-->
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="passwordText">Password</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="emailText">Email</string>
    <string name="backToLoginText">Back To Login</string>

</resources>
