<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:title="My Profile"
            android:id="@+id/menu_profile"
            android:onClick="onOptionsItemSelected"/>
        <item
            android:title="Security"
            android:id="@+id/menu_security"
            android:onClick="onOptionsItemSelected"/>
        <item
            android:title="Settings"
            android:id="@+id/menu_settings"
            android:onClick="onOptionsItemSelected"/>
        <item
            android:title="Help"
            android:id="@+id/menu_help"
            android:onClick="onOptionsItemSelected"/>
        <item
            android:title="Feedback"
            android:id="@+id/menu_feedback"
            android:onClick="onOptionsItemSelected"/>
    </group>
</menu>